# deep3dmap

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
configs/gan2shape/: celeba.py  celeba.yml
configs/gnerf/: gnerf_blender.py  gnerf_dtu.py
configs/lerf/: lerf_config.py
configs/neural_recon/: scannet.py
configs/prnet/: prnet_300wlp.py
configs/pt3d_demos/: imgs2face_300wlp_multipie.py  imgs2face_multipie.py
deep3dmap/: __init__.py  version.py
deep3dmap/core/: __init__.py
deep3dmap/datasets/: AFLW2000.py  __init__.py  blender.py  builder.py  celeba.py  custom.py  dataset_wrappers.py  dtu.py  multipie_3d.py  scannet.py  threehundred_wlp.py  utils.py  xml_style.py
deep3dmap/engines/: __init__.py  version.py
deep3dmap/models/: __init__.py  builder.py  networks.py  neucon_network.py
deep3dmap/parallel/: __init__.py  _functions.py  collate.py  data_container.py  data_parallel.py  distributed.py  distributed_deprecated.py  registry.py  scatter_gather.py  utils.py
deep3dmap/runners/: __init__.py  base_module.py  base_runner.py  builder.py  checkpoint.py  custom_runner.py  epoch_based_runner.py  forward_engine.py  gan2shape_runner.py  iter_based_runner.py  log_buffer.py  priority.py  state_machine_runner.py  utils.py
deeprecon/core/: __init__.py  version.py
deeprecon/datasets/: __init__.py  builder.py  celeba.py  xml_style.py  (+1 more)
demos/: demo_neucon.py
docs/: code_ref.md  get_started.md  install.md
requirements/: environment.yaml  requirements.txt  runtime.txt
tools/: test.bak.py  test.py  train.bak.py  train.py
(+431 files in other folders)
