[project]
name = "deep3dmap-nerf"
version = "0.1.0"

dependencies=[
    "yapf",
    "terminaltables",
    "loguru",
    "pyrender",
    "transforms3d",
    "numba",
    "ray",
    “einops”，
    "torchsparse @ git+https://github.com/mit-han-lab/torchsparse.git@v1.4.0",
    "pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git",
    "open_clip_torch",
    "timm",
    "ftfy",
    "regex",
    "tqdm",
    "clip @ git+https://github.com/openai/CLIP.git",
    "nerfstudio>=0.2.0"
]

[tool.setuptools.packages.find]
include = ["lerf*"]

[project.entry-points.'nerfstudio.method_configs']
lerf = 'lerf.lerf_config:lerf_method'
lerf_big = 'lerf.lerf_config:lerf_method_big'
lerf_lite = 'lerf.lerf_config:lerf_method_lite'
